--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
               <input id="city" style="font-size:25px;" type="text" placeholder="Denver" autofocus="true" class="city-input"/>
               <button type="submit" id="submitBtn" class="btn">Search</button>
             </form>
+            <ul id="search-history"></ul>  
           </div>
         </div>
           
-        <div id="search-history"></div>  
+
     
           <div>
             <div id="city-weather"></div>
           </div>
 
-        <div class="row d-none" id="five-day-forecast">
+        <div class="row" id="five-day-forecast">
           <h3>5-Day Forecast</h3>
           <div class="forecast" ></div>
           <div class="forecast" ></div>
