more futile attempts

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <main class="flex-row">
         <div id="card" class="col-3">
           <div class="border-bottom">
-            <h2>Search for a City:</h2>
             <form id="user-form">
+              <label id="city-search">Search for a City:</label>
               <input id="city" style="font-size:25px;" type="text" placeholder="Denver" autofocus="true" class="city-input"/>
               <button type="submit" id="submitBtn" class="btn">Search</button>
             </form>
