--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="border-bottom">
             <form id="user-form">
               <label id="city-search">Search for a City:</label>
-              <input id="city" style="font-size:25px;" type="text" placeholder="Denver" autofocus="true" class="city-input"/>
+              <input id="city" style="font-size:25px;" type="text" placeholder="Denver" autofocus="true"/>
               <button type="submit" id="submitBtn" class="btn">Search</button>
             </form>
             <ul id="search-history"></ul>  
@@ -35,10 +35,10 @@
 
     
           <div>
-            <div id="city-weather"></div>
+            <div id="city-weather" class="m-10 p-10 align-items-left justify-content-left"></div>
           </div>
 
-        <div class="row" id="five-day-forecast">
+        <div class="row d-none" id="five-day-forecast">
           <h3>5-Day Forecast</h3>
           <div class="forecast" ></div>
           <div class="forecast" ></div>
